# NAM-Trainer-Reloaded

./: .gitattributes  .gitignore  GITHUB_READY.md  INSTALL.md  INSTALL_MACOS.command  INSTALL_MACOS.sh  INSTALL_WINDOWS.bat  MANIFEST.in  README.md  RELEASE.md  RELEASE_NOTES.md  pyproject.toml  requirements-windows.txt  run_trainer.bat  run_trainer.command  run_trainer.sh
docs/source/tutorials/: packed-training.rst
environments/: environment_gpu.yml
nam/: _version.py  data.py  hooks.py  util.py
nam/_dependencies/auraloss/: perceptual.py
nam/models/: __init__.py  _from_nam.py  base.py  exportable.py  factory.py  losses.py  recurrent.py
nam/models/wavenet/: _layer_array.py  _wavenet_wrapper.py
nam/train/: _names.py  _version.py  core.py  full.py  lightning_module.py  metadata.py
nam/train/_resources/: __init__.py  config_model_packed.json  config_model_packed_complex.json  config_model_packed_complex_nano125x3.json  config_model_packed_complex_nano64x4.json  config_model_packed_complex_revylo.json  config_model_packed_double_lite.json  config_model_packed_xdouble_lite.json
nam/train/gui/: __init__.py
nam/train/gui/_resources/: settings.py
nam/train/gui/nam_trainer/: __init__.py  advanced.py  main.py  style.py  themes.py  widgets.py
scripts/: install_unix.sh  install_windows.ps1
tests/test_nam/: test_data.py
tests/test_nam/test_models/: test_packed_wavenet.py
tests/test_nam/test_train/: test_core.py  test_lightning_module.py
