[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nam-trainer-reloaded"
version = "0.1.0"
description = "NAM Trainer Reloaded desktop trainer package"
authors = [
    {name = "NAM Trainer Reloaded maintainers"},
]
keywords = ["audio", "guitar", "neural-amp-modeler", "nam", "trainer"]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.13"
dependencies = [
    "librosa",
    "matplotlib",
    "numpy",
    "pydantic>=2.0.0",
    "pytorch-lightning",
    "requests",
    "rich",
    "scipy",
    "sounddevice",
    "soundfile",
    "tensorboard",
    "torch",
    "transformers>=4",
    "tqdm",
    "wavio>=0.0.5",
]

[project.urls]
homepage = "https://github.com/SlamminMofo/NAM-Trainer-Reloaded"
repository = "https://github.com/SlamminMofo/NAM-Trainer-Reloaded"
upstream = "https://github.com/sdatkinson/neural-amp-modeler"

[project.scripts]
nam = "nam.cli:nam_gui"
nam-full = "nam.cli:nam_full"
nam-hello-world = "nam.cli:nam_hello_world"
nam-trainer-reloaded = "nam.cli:nam_gui"

[tool.setuptools.packages.find]
include = ["nam*"]

[tool.setuptools.package-data]
"nam" = ["models/_resources/*.wav"]
"nam.train._resources" = ["*.json"]
"nam._dependencies.auraloss" = ["LICENSE"]
